Fix z-index issue and add drop shadow

--- a/client/src/main/styles/components/_drawer.scss
+++ b/client/src/main/styles/components/_drawer.scss
@@ -13,6 +13,7 @@
 .drawer--visible {
   max-height: 400px;
   border-bottom: 1px solid black;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.7);
 }
 .drawer__overlay {
   position: fixed;
@@ -23,6 +24,7 @@
   bottom: 0;
   background-color: black;
   opacity: 0;
+  z-index: 5;
 }
 .drawer__overlay--visible {
   opacity: 0.5;
